# straight_set

./: CMakeLists.txt  README.md  straight_set.cpp  straight_set.h
