# CMakeList.txt : CMake project for straight_set, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (straight_set "straight_set.cpp" "straight_set.h")

# TODO: Add tests and install targets if needed.
